# paxos-from-scratch

./: Cargo.toml  README.md
scripts/: get-state.sh  kill.sh  run-node.sh  start.sh
src/: main.rs
