[package]
name = "paxos-from-scratch"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.2"
axum-macros = "0.4.0"
clap = { version = "4.4.11", features = ["derive"] }
futures = "0.3.26"
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
